--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -40,6 +40,7 @@ div.feedContainer {
         // Publicacion
         img.postImage {
             width: 100%;
+            aspect-ratio: 1/1;
         }
 
         // Contenedor de la seccion de abajo
