--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -31,7 +31,6 @@ div.loginContainer {
 
     // Formulario
     form {
-        position: absolute;
         display: grid;
         grid-template-columns: auto;
         grid-auto-rows: min-content;
@@ -77,8 +76,8 @@ div.loginContainer {
             color: #fff;
             border: none;
             box-shadow: 0 2px 2px 1px rgba(34, 34, 34, 0.096);
-            padding: .6rem;
-            font-size: 1rem;
+            padding: .5rem;
+            font-size: .9rem;
             border-radius: 6px;
             width: 60%;
             justify-self: center;
@@ -90,41 +89,62 @@ div.loginContainer {
         div.inputs {
             display: flex;
             flex-direction: column;
-            padding: 1rem 1rem 2.5rem 1rem;
+            padding: .6rem 1rem 2rem 1rem;
             gap: 1rem;
             box-shadow: inset 0 1px 2px 1px rgba(34, 34, 34, 0.11);
             border-radius: 10px;
+
+            @include mobile {
+                gap: .6rem;
+            }
 
             // Titulo de bienvenida
             h3 {
                 text-align: center;
                 color: #222;
                 font-weight: normal;
-                font-size: 1.5rem;
-                transform: translateY(.3rem);
+                font-size: 1.4rem;
+                transform: translateY(.2rem);
             }
             
             label {
                 display: flex;
                 flex-direction: column;
-                color: #333;
                 gap: 0.2rem;
-                font-size: 1rem;
+
+                span {
+                    text-align: left;
+                    color: #222;
+                    opacity: 1;
+                    display: none;
+
+                    @include mobile {
+                        display: inline-block;
+                    }
+                }
 
                 input {
                     background-color: #ffe5d5;
                     border: none;
                     border-radius: 4px;
-                    padding: 0.4rem .6rem;
+                    padding: 0.5rem .6rem;
                     font-size: .9rem;
                     box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.055);
                     outline: none;
                     color: #444;
+                    height: 20px;
                 }    
-
+    
                 input[type="password"] {
-                    font-family: sans-serif;
                     color: #666;
+                }
+
+                input::placeholder {
+                    opacity: 1;
+
+                    @include mobile {
+                        opacity: 0;
+                    }
                 }
             }
 
